--- a/car_main_date.html
+++ b/car_main_date.html
@@ -65,19 +65,19 @@
             return inKm.toLocaleString(strLocation);
         }
 
-        function serviceToHTML(services) {
+        function serviceToHTML(services, currentKm, currentDate) {
             let content = "";
 
-            for (let s of services) {
-                const valDate = s.getValidateDate(dt);
-                const ValKm = s.getValidateKm(carKm);
+            services.forEach(s => {
+                const valDate = s.getValidateDate(currentDate);
+                const ValKm = s.getValidateKm(currentKm);
 
                 content += `<div class="service-detail"><h2>${s.service.name}</h2>`;
                 content += `<strong>Change info</strong><p>Months: ${s.service.months} Km: ${frmKm(s.service.km * 1000, "pt-BR")}</p>`;
                 content += `<p><strong>Next Change info</strong></p>`;
 
                 if (valDate) {
-                    if (dt >= valDate) {
+                    if (currentDate >= valDate) {
                         content += `<span class="cls-urgente">!!!</span>`;
                     } else {
                         content += `<span class="cls-okay"></span>`;
@@ -87,7 +87,7 @@
                 }
 
                 if (ValKm > 0) {
-                    if (carKm >= ValKm) {
+                    if (currentKm >= ValKm) {
                         content += `<span class="cls-urgente">!!!</span>`;
                     } else {
                         content += `<span class="cls-okay"></span>`;
@@ -96,16 +96,13 @@
                     content += `<span><strong>Km to next change</strong> ${frmKm(ValKm, "pt-BR")}</span></br>`;
                 }
 
-                content += `</div>`;
-            }
+                content += `</div>`;                
+            });
 
             return content;
         }
 
-        const carKm = 87000;
-        const dt = new Date();
         const services = [];
-
         //services.push({name: "", months: 0, km: 0, lastDate: new Date(), lastKm: 0 });
         services.push(new Service({ name: "Óleo motor + filtro", months: 12, km: 10, lastDate: new Date("2024/11/01"), lastKm: 92000 }));
         services.push(new Service({ name: "Correia dentada", months: 0, km: 260, lastDate: null, lastKm: 0 }));
@@ -129,8 +126,9 @@
         services.push(new Service({ name: "Higienização ar condicionado", months: 6, km: 0, lastDate: new Date("2024/11/01"), lastKm: 0 }));
         services.push(new Service({ name: "Bateria", months: 48, km: 0, lastDate: null, lastKm: 0 }));
 
-
-        document.querySelector('#dv-services').innerHTML = serviceToHTML(services);
+        const carKm = 87000;
+        const dt = new Date();
+        document.querySelector('#dv-services').innerHTML = serviceToHTML(services, carKm, dt);
     </script>
 </body>
 
