Add icon information

--- a/car_main_date.html
+++ b/car_main_date.html
@@ -11,8 +11,26 @@
             background-color: #edebeb;
             width: 250px;
             padding: 6px;
-            height: 250px;
+            height: 295px;
             margin: 6px;
+        }
+
+        .circle {
+            display: flex;
+            width: 30px;
+            height: 30px;
+            background: rgb(195, 240, 195);
+            border-radius: 50%;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .circle_information {
+            background: rgb(250, 250, 8);
+        }
+
+        .circle_warning {
+            background: rgb(143, 27, 27);
         }
     </style>
 </head>
@@ -75,31 +93,47 @@
                 const intermedDate = endDate ? new Date(endDate) : new Date();
                 intermedDate.setMonth(intermedDate.getMonth() - 2);
 
-                content += `<div class="service-detail"><h2>${s.service.name}</h2>`;
+                let dateState = 0;
+                if (endDate) {
+                    if (currentDate >= endDate) {
+                        dateState = 3;
+                    } else if (intermedDate >= endDate) {
+                        dateState = 2;
+                    } else {
+                        dateState = 1;
+                    }
+                }
+
+                let kmState = 0;
+                if (endKm > 0) {
+                    if (currentKm >= endKm) {
+                        kmState = 3;
+                    } else if (intermedKm >= endKm) {
+                        kmState = 2;
+                    } else {
+                        kmState = 1;
+                    }
+                }
+
+                const state = Math.max(dateState, kmState);
+                let stateClass = "circle";
+                if (state == 3) {
+                    stateClass += " circle_warning";
+                } else if (state == 2) {
+                    stateClass += " circle_information";
+                }
+
+                //content += ``;
+                content += `<div class="service-detail"><div class="${stateClass}"></div><h2>${s.service.name}</h2>`;
                 content += `<strong>Change info</strong><p>Months: ${s.service.months} Km: ${frmKm(s.service.km * 1000, "pt-BR")}</p>`;
                 content += `<p><strong>Next Change info</strong></p>`;
 
+                //content += `<span class="cls-urgente">!!!</span>`;
                 if (endDate) {
-                    if (currentDate >= endDate) {
-                        content += `<span class="cls-urgente">!!!</span>`;
-                    } else if (intermedDate >= endDate) {
-                        content += `<span class="cls-urgente">%%%</span>`;
-                    } else {
-                        content += `<span class="cls-okay"></span>`;
-                    }
-
                     content += `<span><strong>Date to next change</strong> ${frmDate(endDate, "pt-BR")}</span></br>`;
                 }
 
                 if (endKm > 0) {
-                    if (currentKm >= endKm) {
-                        content += `<span class="cls-urgente">!!!</span>`;
-                    } else if(intermedKm >= endKm){
-                        content += `<span class="cls-urgente">%%%</span>`;
-                    } else {
-                        content += `<span class="cls-okay"></span>`;
-                    }
-
                     content += `<span><strong>Km to next change</strong> ${frmKm(endKm, "pt-BR")}</span></br>`;
                 }
 
