--- a/car_main_date.html
+++ b/car_main_date.html
@@ -39,6 +39,9 @@
             background: rgb(143, 27, 27);
         }
     </style>
+    <script src="js/data.js"></script>
+    <script src="js/domain.js"></script>
+    <script src="js/view.js"></script>
 </head>
 
 <body>
@@ -63,148 +66,13 @@
     </div>
 
     <script>
-        //Automobile
-        //Maintenance
-        class Service {
-            constructor(service) {
-                this.service = service;
-            }
-
-            getValidateDate(compareDate) {
-                if (this.service.months > 0 && this.service.lastDate) {
-                    const validateDate = new Date(this.service.lastDate);
-                    validateDate.setMonth(validateDate.getMonth() + this.service.months);
-
-                    return validateDate;
-                }
-
-                return null;
-            }
-
-            getValidateKm(compareKm) {
-                if (this.service.km > 0 && this.service.lastKm > 0) {
-                    return this.service.lastKm + (this.service.km * 1000);
-                }
-
-                return 0;
-            }
-
-            dateToState(currentDate, endDate) {
-                if (endDate) {
-                    const intermedDate = new Date(endDate);
-                    intermedDate.setMonth(intermedDate.getMonth() - 2);
-
-                    if (currentDate >= endDate) {
-                        return 3;
-                    } else if (currentDate >= intermedDate) {
-                        return 2;
-                    } else {
-                        return 1;
-                    }
-                }
-
-                return 0;
-            }
-
-            kmToState(currentKm, endKm) {
-                if (endKm > 0) {
-                    const intermedKm = endKm - 500;
-                    if (currentKm >= endKm) {
-                        return 3;
-                    } else if (currentKm >= intermedKm) {
-                        return 2;
-                    } else {
-                        return 1;
-                    }
-                }
-
-                return 0;
-            }
-        }
-
-        class ConverterUtil {
-            frmDate(inDate, strLocation) {
-                return inDate ? inDate.toLocaleDateString(strLocation) : '';
-            }
-
-            frmKm(inKm, strLocation) {
-                return inKm ? inKm.toLocaleString(strLocation) : 0;
-            }
-        }
-
-        class ServiceHtmlView {
-            constructor(services) {
-                this.services = services;
-                this.converter = new ConverterUtil();
-            }
-
-            serviceToHTML(currentKm, currentDate) {
-                let content = "";
-
-                this.services.forEach(serv => {
-                    const endKm = serv.getValidateKm(currentKm);
-                    const endDate = serv.getValidateDate(currentDate);
-
-                    const kmState = serv.kmToState(currentKm, endKm);
-                    const dateState = serv.dateToState(currentDate, endDate);
-                    const state = Math.max(kmState, dateState);
-
-                    let stateClass = "circle";
-                    if (state == 3) {
-                        stateClass += " circle_warning";
-                    } else if (state == 2) {
-                        stateClass += " circle_information";
-                    }
-
-                    content += `<div class="service-detail"><div class="${stateClass}"></div><h2>${serv.service.name}</h2>`;
-                    content += `<p><strong>Change info</strong><br><b>Months:</b> ${serv.service.months} <b>Km:</b> ${this.converter.frmKm(serv.service.km * 1000, "pt-BR")}</p>`;
-                    content += `<p><strong>Last Change info</strong>:<br><b>Date:</b> ${this.converter.frmDate(serv.service.lastDate, "pt-BR")} <b>Km:</b> ${this.converter.frmKm(serv.service.lastKm, "pt-BR")}</p>`;
-
-                    content += `<p><strong>Next Change info:</strong>`;
-                    if (endDate) {
-                        content += `<br><span><strong>Date to next change</strong> ${this.converter.frmDate(endDate, "pt-BR")}</span>`;
-                    }
-
-                    if (endKm > 0) {
-                        content += `<br><span><strong>Km to next change</strong> ${this.converter.frmKm(endKm, "pt-BR")}</span>`;
-                    }
-
-                    content += `</p></div>`;
-                });
-
-                return content;
-            }
-        }
-
         function loadServiceCards() {
             const carKm = document.querySelector('#car_km').value;
             const dt = new Date(document.querySelector('#car_date').value + 'T00:00:00');
             document.querySelector('#dv-services').innerHTML = new ServiceHtmlView(services).serviceToHTML(carKm, dt);
         }
 
-        const services = [];
-        //services.push({name: "", months: 0, km: 0, lastDate: new Date(), lastKm: 0 });
-        services.push(new Service({ name: "Óleo motor + filtro", months: 12, km: 10, lastDate: new Date("2024/11/01"), lastKm: 97381 }));
-        services.push(new Service({ name: "Correia dentada", months: 0, km: 260, lastDate: null, lastKm: 0 }));
-        services.push(new Service({ name: "Filtro de ar", months: 0, km: 40, lastDate: new Date("2024/11/01"), lastKm: 97381 }));
-        services.push(new Service({ name: "Velas", months: 0, km: 40, lastDate: new Date("2020/07/01"), lastKm: 70600 }));
-        services.push(new Service({ name: "Filtro Combustível", months: 24, km: 20, lastDate: new Date("2024/11/01"), lastKm: 97381 }));
-        services.push(new Service({ name: "Liq. arrefecimento (substituição)", months: 72, km: 160, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Tampa reservatório expansão", months: 36, km: 0, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Verificar transmissão", months: 6, km: 0, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Fluído embreagem", months: 12, km: 10, lastDate: new Date("2020/07/01"), lastKm: 69629 }));
-        services.push(new Service({ name: "Fluído transmissão manual", months: 0, km: 260, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Suspensão verificar", months: 24, km: 20, lastDate: new Date("2020/07/01"), lastKm: 69629 }));
-        services.push(new Service({ name: "Amortecedores dianteiros", months: 36, km: 30, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Amortecedores traseiros", months: 36, km: 30, lastDate: new Date("2023/02/01"), lastKm: 86767 }));
-        services.push(new Service({ name: "Fluído do freio substituir", months: 24, km: 0, lastDate: new Date("2023/09/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Fluído do freio verificar tubulações e mangueiras flexíveis", months: 36, km: 30, lastDate: new Date("2020/07/01"), lastKm: 69629 }));
-        services.push(new Service({ name: "Pneus Dianteiros", months: 36, km: 30, lastDate: new Date("2023/10/01"), lastKm: 59000 }));
-        services.push(new Service({ name: "Pneus Traseiros", months: 36, km: 30, lastDate: new Date("2018/04/01"), lastKm: 45000 }));
-        services.push(new Service({ name: "Pastilhas e discos de freio", months: 36, km: 30, lastDate: new Date("2019/04/01"), lastKm: 59000 }));
-        services.push(new Service({ name: "Sistema de refrigeração", months: 36, km: 30, lastDate: new Date("2018/04/01"), lastKm: 0 }));
-        services.push(new Service({ name: "Higienização ar condicionado", months: 6, km: 0, lastDate: new Date("2024/11/01"), lastKm: 97381 }));
-        services.push(new Service({ name: "Bateria", months: 48, km: 0, lastDate: new Date("2021/06/01"), lastKm: 0 }));
+        const services = new DataService().data;
 
         if (document.querySelector('#car_km').value === '') {
             document.querySelector('#car_km').value = '1000';
